fixed minor spacing

--- a/sarahjaine/static_src/scss/_bio.scss
+++ b/sarahjaine/static_src/scss/_bio.scss
@@ -4,7 +4,7 @@
 }
 
 .bio--textblock {
-	padding: 2rem 1rem 1rem 1rem;
+	padding: 1rem;
 }
 
 .bio--imgblock{
